--- a/MusicCityAnimalRescueManagement/bin/MusicCityAnimalRescueManagement.dll.config
+++ b/MusicCityAnimalRescueManagement/bin/MusicCityAnimalRescueManagement.dll.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=45.63.79.56;Initial Catalog=MCAR_Management;Integrated Security=False;User ID=vs2015;Password=Et0m@0l6^2Fwh64r;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=45.63.79.56;Initial Catalog=MCAR_Management;Integrated Security=False;User ID=vs2015;Password=mcar!read@;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection_DatabasePublish" connectionString="Data Source=45.63.79.56;Initial Catalog=MCAR_Management;Integrated Security=False;User ID=vs2015;Password=mcar!read@;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient" />-->
     <add name="DefaultConnection_DatabasePublish" connectionString="Data Source=45.63.79.56;Initial Catalog=MCAR_Management;Integrated Security=False;User ID=vs2015;Password=Et0m@0l6^2Fwh64r;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
